# tax-monitoring

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  RFC.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  railway.toml
alembic/: env.py
app/: config.py  main.py  middleware.py
scripts/: audit_irrelevant_entries.py  backfill_monitoring_job_id.py  cleanup_legacy_data.py  init_extensions.sql  migrate_and_seed.sh  research_missing_jurisdictions.py  research_special_districts.py  run_bulk_discovery.py  seed_admin_user.py  seed_all.py  seed_comprehensive_rates.py  seed_countries.py  seed_critical_gaps.py  seed_data.py  seed_enhancement.py  seed_enhancement_v2.py  seed_enhancement_v3.py  seed_etg_markets.py  seed_expansion.py  seed_final_fixes.py  seed_fix_production.py  seed_global_research.py  seed_missing_jurisdictions.py  seed_missing_rates.py  seed_regulatory_sources.py  seed_sources_enrichment.py  seed_special_districts.py  seed_subjurisdictions.py  wait_for_db.py
tests/: conftest.py  factories.py  test_admin_schedules_api.py  test_agent_run_api.py  test_agent_run_recorder.py  test_ai_agent_live.py  test_ai_agent_service.py  test_api.py  test_api_integration.py  test_api_keys.py  test_audit_service.py  test_cadence_persistence.py  test_change_detection_service.py  test_jurisdiction_approval.py  test_jurisdiction_service.py  test_monitoring.py  test_monitoring_integration.py  test_monitoring_job_service.py  test_monitoring_schedules_jobtype.py  test_monitoring_service.py  test_pricing.py  test_rule_engine.py  test_scheduler_service.py  test_security.py  test_tax_calculation_service.py  test_tax_rate_service.py  test_triage_agent.py  (+3 more)
(+206 files in other folders)
